--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         href="style.css"/>
     </head>
     <body>
-        <h1>Boba</h1>
-        <p>I love boba </p>
-        <p> Horray! </p>
+        <h1>Merry Christmas</h1>
+        <p>Happy Holidays! </p>
+        <p> & </p>
+        <p> Happy New Year! </p>
         <img src="https://media.istockphoto.com/id/1338422322/photo/funny-portrait-of-cute-puppy-dog-border-collie-wearing-christmas-costume-deer-horns-hat-near.jpg?s=612x612&w=0&k=20&c=8jF5g7gk8hU8jGSvcj3SAMjQzDQdJErdd2c8uT-ohbk="/>
     </body>
 </html>
