--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <body>
         <h1>Merry Christmas</h1>
         <p>Happy Holidays! </p>
-        <p> & </p>
-        <p> Happy New Year! </p>
-        <img src="https://media.istockphoto.com/id/1338422322/photo/funny-portrait-of-cute-puppy-dog-border-collie-wearing-christmas-costume-deer-horns-hat-near.jpg?s=612x612&w=0&k=20&c=8jF5g7gk8hU8jGSvcj3SAMjQzDQdJErdd2c8uT-ohbk="/>
+        <button onclick="location.href='https://satruck.org/'" type="button">Spread the Christmas Spirit- Click Here</button>
+        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExYXh2OXZrMzl5amdnZndmbWsyazhiamRxZ3o3MzFrcWExcnAxeDExYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/k0ptNKkBpAGf29uEnF/giphy.webp" class="image3"/>
+        <img src="https://media4.giphy.com/media/v1.Y2lkPTc5MGI3NjExYXh2OXZrMzl5amdnZndmbWsyazhiamRxZ3o3MzFrcWExcnAxeDExYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/k0ptNKkBpAGf29uEnF/giphy.webp" class="image1"/>
+        <img src="https://media.istockphoto.com/id/1338422322/photo/funny-portrait-of-cute-puppy-dog-border-collie-wearing-christmas-costume-deer-horns-hat-near.jpg?s=612x612&w=0&k=20&c=8jF5g7gk8hU8jGSvcj3SAMjQzDQdJErdd2c8uT-ohbk="class="image2"/>
     </body>
 </html>
